# Kevlar

./: .gitignore  Makefile  README.md  pyproject.toml
KevlarApp/: Package.swift
KevlarApp/.build/: build.db  debug.yaml  release.yaml
KevlarApp/.build/arm64-apple-macosx/debug/: KevlarApp  plugin-tools-description.json
KevlarApp/.build/arm64-apple-macosx/debug/KevlarApp.build/: KevlarApp.d  KevlarApp.emit-module.d  KevlarApp.swiftdeps  ModelPickerView.d  ModelPickerView.swiftdeps  ServerManager.d  ServerManager.swiftdeps  ServerStatus.d  ServerStatus.swiftdeps  SettingsView.d  SettingsView.swiftdeps  StatusView.d  StatusView.swiftdeps  output-file-map.json  primary.priors
KevlarApp/.build/arm64-apple-macosx/debug/KevlarApp.product/: Objects.LinkFileList
KevlarApp/.build/arm64-apple-macosx/debug/Modules/: KevlarApp.swiftmodule  KevlarApp.swiftsourceinfo
KevlarApp/.build/arm64-apple-macosx/release/: KevlarApp  plugin-tools-description.json
KevlarApp/Sources/: KevlarApp.swift  ModelPickerView.swift  ServerManager.swift  ServerStatus.swift  SettingsView.swift  StatusView.swift
KevlarApp/Sources/Resources/: AppIcon.icns
kevlar/: config.py  main.py  menubar.py  menubar_models.py
kevlar/api/: app.py  haiku_proxy.py  models.py  routes.py  sse.py
kevlar/cache/: lru.py  manager.py  persistence.py  prefix_matcher.py
kevlar/cli/: display.py
kevlar/engine/: generator.py  loader.py  sampler.py
kevlar/preprocessing/: normalizer.py  patterns.py
kevlar/utils/: tokenizer.py
tests/: test_api_models.py  test_cache_manager.py  test_normalizer.py  test_thinking.py
(+229 files in other folders)
