[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kevlar"
version = "0.1.0"
description = "Local MLX inference server with Anthropic-compatible API and smart KV caching"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.25.0",
    "mlx-lm>=0.20.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "huggingface-hub>=0.20.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "rumps>=0.4.0",
]

[project.scripts]
kevlar = "kevlar.main:main"
kevlar-gui = "kevlar.menubar:main"

[tool.setuptools.packages.find]
include = ["kevlar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
